[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menus/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 2.11896
margin_top = -1.05945
margin_right = 1026.12
margin_bottom = 498.941
text = "Welcome to:

GALACTIC
ARMADA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Button" parent="."]
margin_left = 462.0
margin_top = 360.0
margin_right = 562.0
margin_bottom = 400.0
text = "Play?"

[node name="quit" type="Button" parent="."]
margin_left = 462.0
margin_top = 420.0
margin_right = 562.0
margin_bottom = 460.0
text = "Quit?"

[node name="Input" type="Button" parent="."]
margin_left = 462.0
margin_top = 300.0
margin_right = 562.0
margin_bottom = 340.0
text = "Keyboard"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Input" to="." method="_on_Input_pressed"]
